--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -10,12 +10,12 @@
         <li style="width: 118px;"><a href="">关于金吉列</a></li>
     </ul>
     <div class="nav-right">
-        <div class="city">
+        <div class="new-city">
             <div class="citynames"><i class="iconfont icon-top">&#xe603;</i>
                 <span class="cityname" id="city-on">北京</span>
                 <i class="city-icon iconfont">&#xe60b;</i>
             </div>
-            <div class="city-box">
+            <div class="new-city-box">
                 <span class="arrow"></span>
                 <div class="city-cont clearfix">
                     <div class="top-div">
