--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -6,7 +6,7 @@ form, input {
 .new_nav_first{
     width: 1200px;
     height: 82px;
-    background-color: gold;
+    background-color: #fff;
 }
 .new_nav_first .new-logo-left{
     width:217px;
@@ -55,48 +55,48 @@ form, input {
 .new_nav_first .nav-right{
     float: right;
 }
-.new_nav_first .city{
-    width:102px;
-    height: 44px;
-    margin-top:48px;
-    margin-right:50px;
+.new_nav_first .new-city{
+    width:60px;
+    height: 30px;
+    margin-top:32px;
     float:left;
     position: relative;
     z-index: 998;
+    cursor: pointer;
 }
 #city-on{
     font-size: 16px;
     padding: 0 2px;
 }
-.new_nav_first .city  .icon-top{
+.new_nav_first .new-city  .icon-top{
     font-size: 20px;
     color: #C13232;
     position: absolute;
     top: 1px;
     left: -19px;
 }
-.new_nav_first .city .city-cc{
+.new_nav_first .new-city .city-cc{
     width:100px;
     height: 21px;
     line-height: 21px;
 }
-.new_nav_first .city .city-cc i{
+.new_nav_first .new-city .city-cc i{
     display: block;
     float: left;
     width:31px;
     height: 21px;
 }
-.new_nav_first .city p{
+.new_nav_first .new-city p{
     margin-top:15px;
     color: #C13232;
     font-size: 24px;
     margin-left: -14px;
 }
-.new_nav_first .city p span{
-    font-size: 14px;
+.new_nav_first .new-city p span{
+    font-size: 18px;
     color:#333333;
     font-weight:500;
-    *line-height: 22px;
+    *line-height: 30px;
 }
 .citynames i{
     margin-right: 6px;
@@ -107,24 +107,26 @@ form, input {
 }
 
 
-.city-box{position: absolute;z-index: 999;display:none;left:-30px;top:54px;*top:56px; width: 584px; background: #fff; border-top: 2px solid #D41B2B;}
-.city-box .arrow{position: absolute; top:-9px; left: 112px; width: 5px; height: 9px; display: inline-block;}
-.city-box .city-cont{border: 1px solid #D2D2D2; border-top: none; padding: 18px 0 10px 0;}
-.city-box .city-cont a{float: left; width: 70px; text-align: center; padding: 0 5px; display: block; color: #666; font-size:14px; line-height: 28px;cursor: pointer}
-.city-box .city-cont a:hover{color: #C13232;}
-.city:hover .city-box{
+.new-city-box{position: absolute;z-index: 999;display:none;left:-140px;top:34px;*top:56px; width: 584px; background: #fff; border-top: 2px solid #D41B2B;}
+.new-city-box .arrow{position: absolute; top:-9px; left: 112px; width: 5px; height: 9px; display: inline-block;}
+.new-city-box .city-cont{border: 1px solid #D2D2D2; border-top: none; padding: 18px 0 10px 0;}
+.new-city-box .city-cont a{float: left; width: 70px; text-align: center; padding: 0 5px; display: block; color: #666; font-size:14px; line-height: 28px;cursor: pointer}
+.new-city-box .city-cont a:hover{color: #C13232;}
+.new-city:hover .new-city-box{
     display: block;
 }
 
 
 /*搜索*/
 .new_nav_first .nav-right .new-searchs{
-    width: 354px;
+    width: 356px;
     height: 30px;
     position: relative;
     z-index: 100;
     margin-top: 26px;
     background-color: #fff;
+    float: right;
+    margin-left: 30px;
 }
 .new_nav_first .submit-select{
     height: 30px;
@@ -203,6 +205,9 @@ form, input {
     float:left;
     font-size:14px;
     color:#666666;
+    height: 28px;
+    border: 1px solid #DCDCDC;
+    border-right: none;
 }
 .new_nav_first .top_sec .will-read-list li{
     line-height: 30px;
