开发美国留学组件

--- a/views/index.html
+++ b/views/index.html
@@ -244,6 +244,7 @@
         </div>
     </div>
   </div>
+  {% include "widget/liuxue_item/liuxue_item.html" %}
 </div>
 {% include "widget/footer/footer.html" %}
 </body>
