--- a/views/index.html
+++ b/views/index.html
@@ -245,6 +245,6 @@
     </div>
   </div>
 </div>
-{% include "widget/footer/footer.html" %}
+{% include "widget/new_footer/new_footer.html" %}
 </body>
 </html>
