--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -22,8 +22,8 @@
 .footer-top h2{
   width: 120px;
   float: left;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 16px;
+  line-height: 16px;
   background: url(../img/foot_03.png) no-repeat left center;
   padding-left:20px;
   margin-top:20px;
@@ -47,6 +47,7 @@
 .sitemap{
   width:240px;
   float:left;
+  margin-right: 80px;
 }
 .sitemap04{
   margin-left:24px
@@ -56,7 +57,7 @@
 }
 
 .foot-map h2 {
-  font-size: 20px;
+  font-size: 16px;
   color: #ffffff;
   line-height: 30px;
   padding: 0 0 16px;
@@ -67,7 +68,7 @@
   line-height: 30px;
 }
 .sitemap02{
-  width: 326px;
+  width: 440px;
 }
 .sitemap02 ul li{
   width:156px;
@@ -210,12 +211,12 @@ ol{
 }
 
 .address{
-  height:110px;
+  /*height:110px;*/
   margin-top:36px;
   padding-left: 22px;
 }
 .address  ol {
-  height:70px;
+  /*height:70px;*/
   margin-top:14px
 }
 
@@ -304,6 +305,10 @@ ol{
 }
 #fx a{
   box-sizing: border-box;
+}
+.liuxue-footer .footer-phone{
+  margin-top: 20px;
+  *margin-top:0;
 }
 .xiangxi-map{
   margin-top:20px;
