--- a/views/index.html
+++ b/views/index.html
@@ -357,4 +357,6 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 </body>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
