--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="page-type">
         <li class="active"><a href="">留学</a></li>
-        <li><a href="">移民</a></li>
+        <!--<li><a href="">移民</a></li>-->
         <li style="width: 118px;"><a href="">关于金吉列</a></li>
     </ul>
     <div class="nav-right">
