--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -11,6 +11,7 @@
 .gw-topitems li{margin-right:0;margin-bottom:0;padding-top:10px;width:400px;border-bottom:none;background-color:#f1f4f6}
 .Triangle{position:absolute;top:0;right:0;width:0;height:0;border-top:20px solid #c13232;border-left:20px solid transparent}
 .gw-topitems .gw-people{margin-left:20px}
+.gw-topitems .gw-news{ margin-right: 16px;}
 .gw-items li:nth-child(3n){margin-right:0}
 .gw-people{position:relative;float:left;margin-left:20px}
 .gw-people img{width:51px;height:51px;border-radius:50%}
@@ -19,9 +20,8 @@
 .gw-people p{color:#333;font-size:16px;margin-top: 10px;}
 .gw-legend{float:right;margin-top:18px;background:#f9f6f1;color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
-
 </style>
-<div id="lxContaniner">
+<div id="lxContaniner" style="margin-left:0;">
 	<div class="lx-head">
 		<h1>美国留学</h1>
 		<ul class="lx-tabitems">
@@ -39,10 +39,20 @@
 							<div class="gw-people">
 								<img src="../assets/img/profile4.jpg" alt="">
 								<span class="pepple-icon">张山</span>
-								<p>习近平引领中国迎春再出发</p>
+								<p>美国研究生双录取（法语授课）申请方案</p>
 							</div>
 							<div class="gw-legend gw-news">留学时讯</div>
 						</a>
+					</li>
+					<li>
+						<a href="javascript:;">
+								<div class="gw-people">
+									<img src="../assets/img/profile4.jpg" alt="">
+									<span class="pepple-icon">张山</span>
+									<p>习近平引领中国迎春再出发</p>
+								</div>
+								<div class="gw-legend gw-news">留学时讯</div>
+							</a>
 					</li>
 					<li>
 							<a href="javascript:;">
@@ -54,20 +64,30 @@
 								<div class="gw-legend gw-news">留学时讯</div>
 							</a>
 						</li>
-						<li>
-								<a href="javascript:;">
-									<div class="gw-people">
-										<img src="../assets/img/profile4.jpg" alt="">
-										<span class="pepple-icon">张山</span>
-										<p>习近平引领中国迎春再出发</p>
-									</div>
-									<div class="gw-legend gw-news">留学时讯</div>
-								</a>
-							</li>
-							<em class="Triangle"></em>
-						</ul>
+						<em class="Triangle"></em>
+					</ul>
 				<!--  -->
-		<ul class="gw-items">
+			<ul class="gw-items">
+					<li class="gw-newslist">
+							<a href="javascript:;">
+								<div class="gw-people">
+									<img src="../assets/img/profile4.jpg" alt="">
+									<span class="pepple-icon">张山</span>
+									<p>美国本科新生双录取申请方案</p>
+								</div>
+								<div class="gw-legend">签证申请/奖学金/签证申请</div>
+							</a>
+					</li>
+					<li class="gw-newslist">
+							<a href="javascript:;">
+								<div class="gw-people">
+									<img src="../assets/img/profile4.jpg" alt="">
+									<span class="pepple-icon">张山</span>
+									<p>习近平引领中国迎春再出发</p>
+								</div>
+								<div class="gw-legend">奖学金/签证申请</div>
+							</a>
+					</li>
 					<li class="gw-newslist">
 							<a href="javascript:;">
 								<div class="gw-people">
@@ -99,35 +119,15 @@
 									</a>
 								</li>
 								<li class="gw-newslist">
-										<a href="javascript:;">
-											<div class="gw-people">
-												<img src="../assets/img/profile4.jpg" alt="">
-												<span class="pepple-icon">张山</span>
-												<p>习近平引领中国迎春再出发</p>
-											</div>
-											<div class="gw-legend">奖学金/签证申请</div>
-										</a>
-									</li>
-									<li class="gw-newslist">
-											<a href="javascript:;">
-												<div class="gw-people">
-													<img src="../assets/img/profile4.jpg" alt="">
-													<span class="pepple-icon">张山</span>
-													<p>习近平引领中国迎春再出发</p>
-												</div>
-												<div class="gw-legend">奖学金/签证申请</div>
-											</a>
-										</li>
-										<li class="gw-newslist">
-												<a href="javascript:;">
-													<div class="gw-people">
-														<img src="../assets/img/profile4.jpg" alt="">
-														<span class="pepple-icon">张山</span>
-														<p>习近平引领中国迎春再出发</p>
-													</div>
-													<div class="gw-legend">奖学金/签证申请</div>
-												</a>
-											</li>
-		</ul>
+									<a href="javascript:;">
+										<div class="gw-people">
+											<img src="../assets/img/profile4.jpg" alt="">
+											<span class="pepple-icon">张山</span>
+											<p>习近平引领中国迎春再出发</p>
+										</div>
+										<div class="gw-legend">奖学金/签证申请</div>
+									</a>
+								</li>
+			</ul>
 	</div>
 </div>
