--- a/views/index.html
+++ b/views/index.html
@@ -4,36 +4,40 @@
 
 <style>
   .lunbo,.branch_company{
-    display: flex;
     width: 1200px;
     margin: 0 auto;
     margin-top: 10px;
+    clear: both;
+  }
+  .lunbo{
+    height: 270px;
   }
   .lunbo_lift{
      width: 800px;
      height: 270px;
     background: #34c360;
+    float: left;
    }
   .lunbo_right{
     width: 400px;
     height: 270px;
     background: #fbd238;
+    float: left;
   }
-  /*.branch_company{*/
-    /*display: flex;*/
-    /*width: 1200px;*/
-    /*margin: 0 auto;*/
-    /*margin-top: 10px;*/
-  /*}*/
+  .branch_company{
+    height: 146px;
+  }
   .branch_company_img{
     width: 190px;
     height: 146px;
     background: #007aff;
+    float: left;
   }
   .branch_company_text{
     width:1010px;
     height: 146px;
     background: #fafafa;
+    float: left;
   }
   .branch_company_text_tilte{
     width: 58px;
@@ -56,7 +60,7 @@
     display: none;
   }
   .nationality_guoqi{
-    display: flex;
+    /*display: flex;*/
     width: 1154px;
     height: 194px;
     border: 3px solid #c13232;
