--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -3,10 +3,10 @@
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc}
 .lx-head h1{float:left;margin-right:70px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
-.lx-tabitems li{position:relative;float:left;width:51px;color:#666;text-align:center;font-size:14px;cursor:pointer}
+.lx-tabitems li{position:relative;float:left;width:51px;color:#666;margin-right:10px;text-align:center;font-size:14px;cursor:pointer}
 .lx-tabitems li.active{color:#c13232}
 .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:51px;height:2px;background:#c13232}
-.gw-items li{float:left;margin-right:20px;margin-bottom:10px;padding-bottom:14px;width:385px;border-bottom:solid 1px #dcdcdc}
+.gw-items li{float:left;margin-right:20px;margin-bottom:10px;padding-bottom:14px;width:385px;*width:380px;width:380px\0;border-bottom:solid 1px #dcdcdc}
 .gw-topitems{position:relative;overflow:hidden;margin-bottom:20px;box-shadow:0 3px 5px #e2e5e6}
 .gw-topitems li{margin-right:0;margin-bottom:0;padding-top:10px;width:400px;border-bottom:none;background-color:#f1f4f6}
 .Triangle{position:absolute;top:0;right:0;width:0;height:0;border-top:20px solid #c13232;border-left:20px solid transparent}
@@ -25,8 +25,8 @@
 	<div class="lx-head">
 		<h1>美国留学</h1>
 		<ul class="lx-tabitems">
-			<li>推荐<em></em></li>
-			<li class="active">中学<em></em></li>
+			<li class="active">推荐<em></em></li>
+			<li>中学<em></em></li>
 			<li>本科<em></em></li>
 			<li>研究生<em></em></li>
 			<li>博士<em></em></li>
@@ -49,7 +49,7 @@
 								<div class="gw-people">
 									<img src="../assets/img/profile4.jpg" alt="">
 									<span class="pepple-icon">张山</span>
-									<p>习近平引领中国迎春再出发</p>
+									<p>美国研究生双录取（法语授课）申请方案</p>
 								</div>
 								<div class="gw-legend gw-news">留学时讯</div>
 							</a>
@@ -59,7 +59,7 @@
 								<div class="gw-people">
 									<img src="../assets/img/profile4.jpg" alt="">
 									<span class="pepple-icon">张山</span>
-									<p>习近平引领中国迎春再出发</p>
+									<p>美国研究生双录取（法语授课）申请方案</p>
 								</div>
 								<div class="gw-legend gw-news">留学时讯</div>
 							</a>
