--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -36,11 +36,12 @@
 </style>
 <body style="background: #f5f5f5;">
 {% include "widget/top/top.html" %}
-<div style="background: #ffffff;">
-  {% include "widget/nav_first/nav_first.html" %}
+
+<div class="main" style="width: 1200px;margin: 0 auto;">
+  {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
+  {{ new_nav_first.new_nav_first(helper) }}
 </div>
 
-{% include "widget/nav_ninth/nav_ninth.html" %}
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
 </div>
@@ -203,7 +204,7 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 </div>
-{% include "widget/footer/footer.html" %}
+{% include "widget/new_footer/new_footer.html" %}
 {% import "widget/slide/slide.html" as  slide %}
 {{slide.leyu_slide("AD_COOPEARTION_SEAT10") }}
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
