--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -37,10 +37,10 @@
 <body style="background: #f5f5f5;">
 {% include "widget/top/top.html" %}
 
-<div class="main" style="width: 1200px;margin: 0 auto;">
+<div class="main" style="width: 1180px;margin: 0 auto;">
   {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
   {{ new_nav_first.new_nav_first(helper) }}
-</div>
+</div>s
 
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
