修改 联系我们

--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -197,7 +197,7 @@
           text: $(this).parents('p').find('.contactingcc').html(),
           className: "title"
         },
-        /* content: {
+        /* content: {s
          className: "content",
          text: ["地址：北京市建国门外大街", "电话：(010)65131892"]
          },*/
