--- a/views/about/about.html
+++ b/views/about/about.html
@@ -15,10 +15,8 @@
 <body style="background: #f5f5f5;">
 {% include "widget/top/top.html" %}
 
-<div class="main" style="width: 1180px;margin: 0 auto;">
-  {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
-</div>
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
   <div class="dui-layout-lg about-guanggao" id="AD_PROFILE_SEAT1">
