--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -2,11 +2,25 @@ form, input {
     margin: 0;
     padding: 0;
 }
-
-.new_nav_first{
+.new_nav_first_white{
     width: 100%;
     height: 82px;
     background-color: #fff;
+}
+.new_nav_first_red{
+    width: 100%;
+    height: 82px;
+    background-color: #C13232;
+}
+.new_nav_first_white .new_nav_first{
+    width: 1200px;
+}
+.new_nav_first_red .new_nav_first{
+    width: 1180px;
+}
+.new_nav_first{
+    margin: 0 auto;
+    height: 82px;
 }
 .new_nav_first .new-logo-left{
     width:217px;
