--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -1,14 +1,14 @@
-{% macro new_nav_first(helper) %}
+{% macro new_nav_red(helper) %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/new_nav_first/new_nav_first.css" >
-<div class="new_nav_first_white">
+<div class="new_nav_first_red">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
-            <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_red.png" alt="金吉列留学官网"/></a>
+            <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
         </div>
         <ul class="page-type">
             <li class="active"><a href="">留学</a></li>
             <!--<li><a href="">移民</a></li>-->
-            <li style="width: 118px;"><a href="">关于金吉列</a></li>
+            <li style="width: 118px;" class="active"><a href="">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-city">
