轮播图修改

--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,7 @@
       {% include "widget/xSlider/xSlider.html" %}
     </div>
     <div class="lunbo_right">
-      {% include "widget/xSlider/xSlider.html" %}
+      {% include "widget/xSlider/xSlider2.html" %}
     </div>
   </div>
   <!--50家分公司-->
