--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -34,10 +34,8 @@
 {# 大学排名 #}
 {# 头部导航 #}
 {% include "widget/top/top.html" %}
-<div class="main" style="width: 1180px;margin: 0 auto;">
-    {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-    {{ new_nav_first.new_nav_first(helper) }}
-</div>
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
 
 <div class="dui-layout-lg clearfix">
   <p style="font-size: 14px;margin-left: 20px;margin-top: 20px;"><i class="iconfont" style="color: #C13232">&#xe60d;</i>>><span style="color: #C13232">留学消费教育特约专家</span></p>
