--- a/views/about/events.html
+++ b/views/about/events.html
@@ -20,10 +20,8 @@
 <body style="background: #f5f5f5;">
 {% include "widget/top/top.html" %}
 
-<div class="main" style="width: 1180px;margin: 0 auto;">
-  {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
-</div>
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
 
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
