--- a/views/widget2/side_menu/adviser_side_menu.html
+++ b/views/widget2/side_menu/adviser_side_menu.html
@@ -41,12 +41,12 @@ set side_ul = [
 "li_url": "advisor_center/revcomment"
 },
 {
-"li_name": "发布专栏",
+"li_name": "发布我的文章",
 "li_url": "advisor_center/postarticle"
 },
 {
-"li_name": "发布案例",
-"li_url": "advisor_center/postcase"
+"li_name": "上传我的二维码",
+"li_url": "advisor_center/postarticle"
 },
 {
 "li_name": "个人信息设置",
@@ -76,7 +76,7 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
-                        {% elif  mItem.li_name == '发布专栏' %}
+                        {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe768;
                         {% elif  mItem.li_name == '发布案例' %}
                         &#xe631;
@@ -117,7 +117,7 @@ set side_ul = [
                         &#xe6a9;
                         {% elif  mItem.li_name == '收到的评论' %}
                         &#xe61b;
-                        {% elif  mItem.li_name == '发布专栏' %}
+                        {% elif  mItem.li_name == '发布我的文章' %}
                         &#xe768;
                         {% elif  mItem.li_name == '发布案例' %}
                         &#xe631;
