--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -1,5 +1,5 @@
-<style>
-	#lxContaniner{margin-top:30px;width:1200px;overflow: hidden;}
+<style type="text/css">
+#lxContaniner{margin-top:30px;width:1200px;overflow: hidden;}
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc}
 .lx-head h1{float:left;margin-right:70px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
@@ -14,14 +14,14 @@
 .gw-topitems .gw-news{ margin-right: 16px;}
 .gw-items li:nth-child(3n){margin-right:0}
 .gw-people{position:relative;float:left;margin-left:20px}
-.gw-people img{width:51px;height:51px;border-radius:50%}
+.gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{position:absolute;top:18px;left:66px;width:45px;color:#333;font-size:14px}
 .gw-people .pepple-icon{background:url(../assets/img/1v.png) no-repeat;background-position:right center}
 .gw-people p{color:#333;font-size:16px;margin-top: 10px;}
 .gw-legend{float:right;margin-top:18px;background:#f9f6f1;color:#c13232;font-size:12px}
-.gw-news{width:76px;height:20px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
+.gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 </style>
-<div id="lxContaniner" style="margin-left:0;">
+<div id="lxContaniner" style="margin-left:0;overflow:hidden">
 	<div class="lx-head">
 		<h1>美国留学</h1>
 		<ul class="lx-tabitems">
@@ -32,6 +32,7 @@
 			<li>博士<em></em></li>
 		</ul>
 	</div>
+	<!--  -->
 	<div class="lx-groupitems">
 			<ul class="gw-items gw-topitems">
 					<li>
