解决图片路径错误

--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -49,7 +49,7 @@
 			font-size: 14px;
 			margin-left: 10px;
 			margin-right: 64px;
-			background: url(1v.png) no-repeat;
+			background: url(../assets/img/1v.png) no-repeat;
 			background-position: right center;
 			padding-right: 20px;
 		}
