图片引用错误

--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -56,9 +56,9 @@
 </style>
 <ul class="gw-likelist">
       <li>
-        <a href="javascript::">
+        <a href="javascript:;">
           <div class="likes-item">
-            <img src="https://imgsa.baidu.com/news/q%3D100/sign=e8fe84bc8e26cffc6f2abbb289004a7d/a1ec08fa513d26970655fa7859fbb2fb4316d815.jpg" alt="">
+            <img src="../assets/img/profile3.jpg" alt="">
             <span class="people-name">张三</span>
             <span class="people-action">指导/申请</span>
           </div>
