--- a/views/index.html
+++ b/views/index.html
@@ -73,6 +73,11 @@
     position: relative;
     margin: 0 auto;
   }
+  .liuxue-guoqi img{
+    width:46px;
+    height:30px;
+
+  }
   .liuxue-guoqi{
     width: 100%;
     height: auto;
@@ -86,6 +91,9 @@
   .liuxue-guoqi a{
     width: auto;
     margin: 20px 50px 47px 0;
+    height:30px;
+    display: inline-block;
+    position: relative;
   }
   .liuxue-guojia-title{
     position: absolute;
