--- a/views/widget/advisor_star/advisor_star_cell.css
+++ b/views/widget/advisor_star/advisor_star_cell.css
@@ -98,7 +98,7 @@
     color: #C13232;
 }
 /* 2018-2-27 */
-.gw-list{width:280px;list-style:none;margin:100px auto}
+.gw-list{width:280px;list-style:none;}
 .gw-list li{border-bottom:solid 1px #dcdcdc;margin-top:20px}
 .gw-list a{color:#333;text-decoration:none}
 .likes-item{overflow:hidden}
