--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,7 @@
       {% include "widget/xSlider/xSlider.html" %}
     </div>
     <div class="lunbo_right">
-      {% include "widget/xSlider/xSlider2.html" %}
+     {# {% include "widget/xSlider/xSlider2.html" %}  #}
     </div>
   </div>
   <!--50家分公司-->
@@ -381,7 +381,7 @@
       });
       $('.lunbo_lift .slider').xSlider({
           //轮播图配置
-          autoplay : 500,
+//          autoplay : 500,
           current: 0,
           speed: 500,
           intervalTime: 5000,
@@ -389,9 +389,9 @@
       });
       $('.lunbo_right .slider').xSlider({
           //轮播图配置
-          autoplay : 500,
+//          autoplay : 500,
           mode:'vertical',
-          current: 0,
+//          current: 0,
           speed: 1000,
           intervalTime: 5000,
           slidesPerView : 2,
