--- a/views/widget/xSlider/xSlider2.html
+++ b/views/widget/xSlider/xSlider2.html
@@ -2,13 +2,13 @@
         <div class="slider-img">
               <ul class="slider-img-ul">
                   <li>
-                    {% if xSlider[xSlider.length-1] | length  %}
-                      <a href="{{xSlider[xSlider.length-1].linkurl}}" data-pid="{{xSlider[xSlider.length-1].pid}}" target="_blank" >
-                          <img src="{{xSlider[xSlider.length-1].imageurl}}" alt="{{xSlider[xSlider.length-1].alt}}">
+                    {% if xSlider2[xSlider2.length-1] | length  %}
+                      <a href="{{xSlider2[xSlider2.length-1].linkurl}}" data-pid="{{xSlider2[xSlider2.length-1].pid}}" target="_blank" >
+                          <img src="{{xSlider2[xSlider2.length-1].imageurl}}" alt="{{xSlider2[xSlider2.length-1].alt}}">
                        </a>
                     {% endif %}
                   </li>
-                 {% for item in xSlider %}
+                 {% for item in xSlider2 %}
                   <li>
                     <a href="{{item.linkurl}}" data-pid="{{item.pid}}" target="_blank">
                         <img src="{{item.imageurl}}" alt="{{item.alt}}">
@@ -16,9 +16,9 @@
                   </li>
                   {% endfor %}
                   <li>
-                    {% if xSlider[0] | length %}
-                      <a href="{{xSlider[0].linkurl}}" data-pid="{{xSlider[0].pid}}" target="_blank">
-                          <img src="{{xSlider[0].imageurl}}"  alt="{{xSlider[0].alt}}">
+                    {% if xSlider2[0] | length %}
+                      <a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}" target="_blank">
+                          <img src="{{xSlider2[0].imageurl}}"  alt="{{xSlider2[0].alt}}">
                        </a>
                     {% endif %}
                   </li>
