--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -1,294 +1,74 @@
+
 .liuxue-footer{
   width: 100%;
+  height: 424px;
   background: #000 url(../img/bg_footer.jpg);
-  opacity: 0.85;
+  opacity: 0.9;
   margin-top:20px;
 }
-
 .liuxue-footer-content{
   width: 1180px;
-  margin:20px auto;
+  margin:0 auto;
   color:#ffffff;
 }
-.liuxue-footer-content h2{
+.liuxue-footer-content .foot-map {
+  padding: 50px 0 31px;
+}
+.liuxue-footer-content .foot-map .sitemap h2{
   color:#ffffff;
   font-size: 16px;
   font-weight: normal;
-  margin-top:0;
-  margin-bottom: 0;
-
+  line-height: 16px;
+  padding-bottom: 22px;
 }
-
-.footer-top h2{
-  width: 120px;
+.liuxue-footer-content .foot-map .sitemap {
   float: left;
+}
+.liuxue-footer-content .foot-map .sitemap ul li {
+  font-size: 12px;
+  line-height: 30px;
+}
+.liuxue-footer-content .foot-map .sitemap ul li a{
+  color: #fff;
+}
+.liuxue-footer-content .foot-map .sitemap01 {
+  width: 320px;
+}
+.liuxue-footer-content .foot-map .sitemap02 {
+  width: 420px;
+}
+.liuxue-footer-content .foot-map .sitemap01 ul{
+  float: left;
+}
+.liuxue-footer-content .foot-map .sitemap01 .left-ul{
+  margin-right: 58px;
+}
+.liuxue-footer-content .foot-map .sitemap04 dl {
+  float: left;
+  text-align: center;
+}
+.liuxue-footer-content .foot-map .sitemap04 dl dt{
+  margin-bottom: 10px;
+}
+.liuxue-footer-content .foot-map .sitemap04 dl.foot-weibo {
+  margin-right: 50px;
+}
+.liuxue-footer-content .address h2{
   font-size: 16px;
   line-height: 16px;
-  background: url(../img/foot_03.png) no-repeat left center;
-  padding-left:20px;
-  margin-top:20px;
+  margin-bottom: 10px;
 }
-.footer-top a{
-  padding:0 14px;
-  color:#ffffff;
-  font-size: 16px;
-  display: inline-block;
-  margin-top:21px;
-}
-.foot-map {
-  margin-top:22px;
-  padding: 20px 0px 80px 22px;
-  color: #666;
+.liuxue-footer-content .address ol li {
+  line-height: 30px;
   font-size: 14px;
-  height:168px;
-  *height:110px;
-  box-sizing: border-box;
 }
-.sitemap{
-  width:240px;
-  float:left;
-  margin-right: 80px;
-}
-.sitemap04{
-  margin-left:24px
-}
-.sitemap02{
-  margin:0 6px
-}
-
-.foot-map h2 {
-  font-size: 16px;
-  color: #ffffff;
-  line-height: 30px;
-  padding: 0 0 16px;
-}
-.sitemap ul li{
-  float: left;
-  width: 102px;
-  line-height: 30px;
-}
-.sitemap02{
-  width: 440px;
-}
-.sitemap02 ul li{
-  width:156px;
-}
-.sitemap ul li a{
-  color: #ffffff;
-}
-.ewm{
-  clear: both;
-  margin-top: 20px;
-}
-.sitemap03{
-  width:310px;
-}
-
-.sitemap04 img{
-  width:80px;
-  height:80px;
-}
-.sitemap04 dl{
-  float:left;
-  width:80px;
-}
-.sitemap04 .foot-weibo{
-  margin-right:46px;
-}
-.sitemap04 dd{
-  line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-}
-.liuxue-footer .foot-banner{
-  height:120px;
-  margin-top:38px;
-  *margin-top:0px!important;
-  padding-left:22px;
-}
-.guoqi-top2{
-  background: url(../img/guoqi-name-top.png) no-repeat;
-  width:56px;
-  height:32px;
-  display: block;
-  position: absolute;
-  top:-32px;
-  left:20px;
-  color:#ffffff;
-  font-size: 12px;
-  text-align: center;
-  line-height: 24px;
-}
-
-.guoqi-top1{
-  background: url(../img/guoqi-name-top1.png) no-repeat;
-  width:56px;
-  height:32px;
-  display: block;
-  position: absolute;
-  top:-32px;
-  left:20px;
-  color:#ffffff;
-  font-size: 12px;
-  text-align: center;
-  line-height: 24px;
-}
-.guoqi-bot{
-  background: url(../img/guoqi-name-bot.png) no-repeat;
-  width:56px;
-  height:32px;
-  display: block;
-  position: absolute;
-  top:30px;
-  left:20px;
-  color:#ffffff;
-  font-size: 12px;
-  text-align: center;
-  line-height: 40px;
-}
-.footer-bot{
-  height: 66px;
-  clear: both;
-  margin-top:20px;
-  *margin-top:38px;
-  border-top:1px solid #4a4a4a;
-}
-.footer-bot .jjl{
-  height:66px;
-  width: 60px;
-  color: #ffffff;
-  padding:0 0px 6px;
-  float: left;
-  margin-right: 10px;
-
-}
-.footer-bot .jjl p{
-  line-height: 24px;
-}
-.dzg-wz{
-  padding: 10px 10px;
-}
-
-.dzg-wz ul li{
-  color: #ffffff;
+.liuxue-footer-content .address ol li i {
   display: inline-block;
-  padding:3px 8.8px;
-  font-weight: 300;
-  font-size:12px;
-  position: relative;
-  float:left;
+  width: 22px;
 }
-.dzg-wz li a{
-  color: #ffffff;
-}
-ol{
-  display:block;
-}
-.ol-none{
-  display: none;
-}
-
-.address{
-  /*height:110px;*/
-  margin-top:36px;
-  padding-left: 22px;
-}
-.address  ol {
-  /*height:70px;*/
-  margin-top:14px
-}
-
-.address ol li{
-  line-height: 34px;
-  *line-height:16px
-}
-.address ol dl dt{
-  width:14px;
-  height:14px;
-  margin:0px 12px 0 0;
-  float:left;
-}
-.address ol dl dt img{
-  width: 14px;
-  height:14px;
-}
-.foot-banben{
-  margin-top:8px;
-}
-.foot-banben p{
-  line-height: 40px;
+.liuxue-footer-content .copyright{
   text-align: center;
-  font-size: 12px;
-}
-.xiangxi-address{
-  display: none;
-  font-size:14px;
-}
-.xiangxi-address .iconfont{
-  color:#fff;
-  font-size: 18px;
-}
-
-.one{
-  display: block;
-}
-.guanzhu{
-  float:left;
-  margin-right:12px;
-}
-.bdsharebuttonbox{
-  float:left
-}
-.dzg-wz a:hover{
-  color:#c13232;
-}
-.footer-top a:hover{
-  color:#c13232;
-}
-.foot-map ul li a:hover{
-  color:#c13232;
-}
-.bdimgshare-bg,.sr-bdimgshare .bdimgshare-content {
-  display: none;
-}
-
-#fx a{
-  width:26px;
-  height: 26px;
-}
-#fx .bds-tsina{
-  background: url(../img/fenxiang.png) no-repeat 0 0;
-  background-size: 100px 500px;
-  z-index: 99999;
-  background-position: -46px -104px;
-}
-#fx .bds-weixin{
-  background: url(../img/fenxiang.png) no-repeat 0 0;
-  background-size: 100px 500px;
-  z-index: 99999;
-  background-position: -45px -190px;
-}
-
-#fx .bds-renren{
-  background: url(../img/fenxiang.png) no-repeat 0 0;
-  background-size: 100px 500px;
-  z-index: 99999;
-  background-position: -46px -276px;
-}
-#fx .bds-qzone{
-  background: url(../img/fenxiang.png) no-repeat 0 0;
-  background-size: 100px 500px;
-  z-index: 99999;
-  background-position: -45px -362px;
-}
-#fx a{
-  box-sizing: border-box;
-}
-.liuxue-footer .footer-phone{
-  margin-top: 20px;
-  *margin-top:0;
-}
-.xiangxi-map{
-  margin-top:20px;
-  *margin-top:0;
+  font-size: 14px;
+  color: #B4B4B4;
+  margin-top: 34px;
 }
