--- a/views/widget2/article/article.css
+++ b/views/widget2/article/article.css
@@ -71,7 +71,7 @@
     height:100%;
 }
 
-/*=========¾Ù±¨Í¶Ëß========*/
+/*=========ï¿½Ù±ï¿½Í¶ï¿½ï¿½========*/
 
 .art-box .offer-xialas {
     position: absolute;
@@ -105,7 +105,7 @@
 .art-box .offer-xialas:hover .offer-xiala{
     display: block;
 }
-/*¹¦ÄÜ°´Å¥À¸*/
+/*ï¿½ï¿½ï¿½Ü°ï¿½Å¥ï¿½ï¿½*/
 .art-box .offer-opt-bar{
     top: 10px;
     right: 32px;
