--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -23,6 +23,85 @@
         width:100%;
         height:100%;
     }
+    .homepage {
+      width: 880px;
+    }
+    .homepagecon {
+      width: 880px;
+      height: 77px;
+    }
+    .homepageing {
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      margin: 16px 10px 10px 20px;
+      float: left;
+    }
+    .homepagecon ul{
+       float: right;
+      margin-top: 28px;
+      margin-right: 10px;
+     }
+    .homepagecon h3 {
+      line-height: 77px;
+      font-size: 14px;
+      color: #333;
+      float: left;
+    }
+    .homepagecon h3 img {
+      margin-left: 4px;
+    }
+    .homepagecon ul li {
+      float: left;
+      margin-right: 10px;
+    }
+    .homepage-title {
+      width: 880px;
+      height: 30px;
+      margin-top: 7px;
+    }
+    .homepage-title p {
+      font-size:16px;
+      color: #333;
+      margin-left: 20px;
+      float: left;
+    }
+    .homepage-title div {
+      width: 80px;
+      height: 24px;
+      float: left;
+      margin-left: 20px;
+      background: #C13232;
+      opacity: 0.6;
+      text-align: center;
+      line-height: 24px;
+      border-radius:12px ;
+      margin-top: -3px;
+    }
+    .homepage-p {
+      width: 840px;
+      margin: 0px 20px 12px 20px;
+    }
+    .homepage-p p {
+      line-height: 24px;
+      font-size: 12px;
+      color: #666;
+    }
+    .homepage-li {
+      width: 840px;
+    }
+    .homepage-li li img {
+      width: 150px;
+      height: 150px;
+      margin-left: 20px;
+      float: left;
+    }
+    .homepage-span {
+      width: 880px;
+      height: 44px;
+      line-height: 44px;
+      background: purple;
+    }
   </style>
 </head>
 <body style="background: #f5f5f5">
