--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -1,39 +1,32 @@
 {% macro article_show(item,helper) %}
-<div class="art-box clearfix" >
-  <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 60px 76px;"></div>
-  </a>
-  <div class="adviser-info" >
-     <div class="adviser-info-name" style="font-size: 14px">
-       <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" style="color: #333;">{{item.user_info.realname}}</a>
-     </div>
-     <div class="adviser-info-date clearfix" >
-         <span class="adviser-info-date-s" style="color: #666">{{item.add_time}}</span>
-         <span>来自：{{item.from}}</span>
-     </div>
-     <div class="adviser-info-title">
-       <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" style="color: #C13232">{{item.title}}</a>
-     </div>
-     <div class="offer-xialas">
-        <span class="offer-xialadd iconfont">&#xe60b;</span>
-        <ul class="offer-xiala">
-          <li><a target="_blank" class="dui-text-warning-s report-btn" data-artId="{{item.id}}" data-catid="{{item.category_id}}">举报</a></li>
-          <li><a target="_blank" class="dui-text-warning-s share-btn" data-url="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" data-title ="{{item.title}}">分享</a></li>
-        </ul>
-     </div>
-     <p class="adviser-info-p">
-       <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
-         {{item.introduce}} <span>【查看详情】</span>
-       </a>
-     </p>
-      <ul id="adviser-info-ul" class="adviser-info-ul clearfix" >
-        {% for val in item.img_list %}
-          <li>
-          	<img src="{{helper.imageThumb(val,'150x150')}}" >
-          </li>
-        {% endfor %}
-      </ul>
+<div class="homepage">
+  <div class="homepagecon">
+    <div class="homepageing" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
+    <h3>{{item.user_info.realname}}<img src="../assets/img/1v.png" alt=""></h3>
+    <ul>
+      <li><img src="../assets/img/wx.png" alt=""></li>
+      <li><img src="../assets/img/pyq.png" alt=""></li>
+      <li><img src="../assets/img/xl.png" alt=""></li>
+      <li><img src="../assets/img/qq.png" alt=""></li>
+      <li style="color: #666;font-size: 12px">举报</li>
+    </ul>
   </div>
+  <div class="homepage-title">
+    <p>{{item.title}}" <div>{{item.from}}</div></p>
+  </div>
+  <div class="homepage-p">
+    <p><a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+      {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
+    </a>
+    </p>
+  </div>
+  <ul class="homepage-li">
+    {% for val in item.img_list %}
+    <li>
+      <img src="{{helper.imageThumb(val,'150x150')}}" >
+    </li>
+    {% endfor %}
+  </ul>
 </div>
 {% endmacro %}
 {% macro article_edit(item,helper) %}
