--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -10,6 +10,7 @@
   width: 1180px;
   margin:0 auto;
   color:#ffffff;
+  position: relative;
 }
 .liuxue-footer-content .foot-map {
   padding: 50px 0 31px;
@@ -67,8 +68,20 @@
   width: 22px;
 }
 .liuxue-footer-content .copyright{
-  text-align: center;
   font-size: 14px;
   color: #B4B4B4;
   margin-top: 34px;
+}
+.liuxue-footer-content .adviser-login {
+  width: 98px;
+  height: 24px;
+  text-align: center;
+  line-height: 24px;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0px;
+  right: 232px;
+  cursor: pointer;
 }
