--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -45,5 +45,8 @@
       </ol>
     </div>
     <p class="copyright">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+    <div class="adviser-login">
+      咨询顾问登录
+    </div>
   </div>
 </div>
