--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -57,8 +57,9 @@
     color: #999;
   }
   .l_u_com_yan{
-    width: 204px;
+    width: 169px;
     height: 26px;
+    padding-left: 35px;
     font-size: 14px;
     color: #999;
   }
@@ -106,17 +107,18 @@
   }
 </style>
 <div class="l_u" style="display: none;">
-  <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_red.png" alt=""></div>
+  <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
   <div class="l_u_con">
     <p>验证码登录</p>
     <div class="l_u_con_"></div>
     <form class="m-t" role="form" style="margin-top: 20px">
       <div class="form-group inputtext_isr" style="position: relative;">
-        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="newEmail"/>
+        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="newphone" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确"/>
         <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
       </div>
-      <div class="form-group clearfix" style="margin-top: 20px">
+      <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
         <input placeholder="请输入短信验证码" type="text" id="verify" class="form-control l_u_com_yan" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+        <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe653;</i>
         <div class="l_u_com_bang">
           <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
           <input type="button" class="btn btn-primary" style="width: 90px;height: 40px;text-align: center;padding: 6px 2px;background: #fff;color: #c13232;border: 1px solid #c13232;border-radius: 3px;line-height: 0px" id="sendcun" value="发送验证码"/>
@@ -172,28 +174,18 @@
 
   })
 </script>
+<script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script>
-  function getlogin () {
-//     var h = window.location.href;
-//     console.log('h', h);
-//     var hh = h.split("/");
-//     console.log('hh[1]', hh[3]);
-//     var hhh = h.split("?");
-//     console.log('hhh', hhh[1])
-//     if (hh[3] != 'register' && hh[3] != 'forget') {
-//       console.log('11111')
-// //      window.location.href = '/login?h=' + h
-//       window.open('/login?h=' + h);
-//     } else if (hhh[1] != undefined && hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login') {
-//       console.log('aaaa')
-//       window.location.reload();
-//     } else {
-//       console.log('22222')
-// //      window.location.href = '/login'
-//       window.open('/login');
 
-//     }
+  $(document).ready(function () {
+
+    $("form").Vaild();
+    
+  })
+  function getlogin () {
 
         layer.open({
 	            type: 1,
@@ -208,32 +200,19 @@
 	            content: $('.l_u'),
 	            success : function(){
 	            	
-	            }
+              },
+              cancel:function(){
+                $("#newphone").parent().removeClass("has-error").addClass("has-success");
+                $("#newphone").popover("destroy");
+              },
+              end:function() {
+                $("#newphone").parent().removeClass("has-error").addClass("has-success");
+                $("#newphone").popover("destroy");
+              }
 	        });
     
   }
 
-  $(function(){
-    $('#getlogin').on('click', function () {
-      
-    })
-  })
-  function outlogin () {
-    $.ajax({
-      url: '/login_out',
-      type: 'GET',
-      datatype: 'json',
-      success:function(msg){
-        if (msg == 'ok') {
-          console.log('登出')
-          window.location.reload()
-        }
-      },
-      error:function(XMLHttpRequest, textStatus, errorThrown){
-        console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
-      }
-    })
-  }
 </script>
 
 {#{% if login_nickname == '' %}
