--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -16,7 +16,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在线评估</span>
             <div id="comment_con"
-                 style="width: 280px;height: 600px;background: #fff;right: 50px;top: -100px;position: absolute;border: 1px solid #dcdcdc;display: none">
+                 style="width: 280px;height: 600px;background: #fff;right: 42px;top: -100px;position: absolute;border: 1px solid #dcdcdc;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer; color:#333333;">x</div>
               <!--  <iframe id="floatUrls" style="width: 100%;height:100%;" frameborder="no" border="0"
                        marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"
@@ -26,15 +26,21 @@
               {{ online_evaluation.online_evaluation(path) }}
             </div>
           </li>
-          <li class="weixin_ewm">
+          <li class="weixin_ewm my">
             <img src="{{helper.cdnhost}}/assets/img/geren.png" alt="" class="quick-img">
             <p class="mine" style="">我的</p>
           </li>
-          <li class="weixin_ewm">
+          <li class="weixin_ewm weixin-slide">
             <img src="{{helper.cdnhost}}/assets/img/weixin_slide.png" alt="" class="quick-img" style="height: 22px;margin-top: 3px;">
+            <div class="weixin-slide-img">
+
+            </div>
           </li>
-          <li class="weixin_ewm">
+          <li class="weixin_ewm qq-slide">
             <img src="{{helper.cdnhost}}/assets/img/qq_slide.png" alt="" class="quick-img">
+            <div class="qq-slide-img">
+
+            </div>
           </li>
           <li id="to_top">
             <img src="{{helper.cdnhost}}/assets/img/top.png" alt="" class="quick-img">
