--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -6,9 +6,9 @@
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
         </div>
         <ul class="page-type">
-            <li class="active"><a href="">留学</a></li>
+            <li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
             <!--<li><a href="">移民</a></li>-->
-            <li style="width: 118px;" class="active"><a href="">关于金吉列</a></li>
+            <li style="width: 118px;" class="active"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-city">
