--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="new-searchs new-home-search">
-                <div class="top_sec will">
+                <!--<div class="top_sec will">
                     <span class="please-sec"><a  target="_blank" href="javascript:void(0);" id="searchType">顾问</a><i class="iconfont go-down" style="font-size: 12px;">&#xe60b;</i></span>
                     <div class="sec-xq">
                         <ul id="searchTypeList">
@@ -357,7 +357,7 @@
 
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <input type="text" id="search" placeholder="请输入搜索关键词" class="text text-nav"
                        onfocus="if(this.placeholder == '请输入搜索关键词'){this.value = '';}"
                        onblur="if(this.value == ''){this.placeholder= '请输入搜索关键词';}">
