--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -1,7 +1,7 @@
 <!--右侧在线咨询-->
 
 {% macro leyu_slide(path) %}
-<div class="mui-mbar-tabs" style="z-index:10000">
+<div class="mui-mbar-tabs" style="z-index:999">
   <div class="quick_links_wrap quick_links_dockright">
     <div class="quick_link_mian">
 
@@ -28,7 +28,7 @@
           </li>
           <li class="weixin_ewm my">
             <img src="{{helper.cdnhost}}/assets/img/geren.png" alt="" class="quick-img">
-            <p class="mine" style="">我的</p>
+            <p class="mine" >我的</p>
           </li>
           <li class="weixin_ewm weixin-slide">
             <img src="{{helper.cdnhost}}/assets/img/weixin_slide.png" alt="" class="quick-img" style="height: 22px;margin-top: 3px;">
