--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -16,7 +16,7 @@
           <div class="likes-item">
             <img src="../assets/img/profile3.jpg" alt="">
             <span class="people-name">张三</span>
-            <span class="people-action">指导/申请</span>
+            <span class="people-action">指导</span>
           </div>
           <div class="article">冬奥会正式进入北京时间揭秘</div>
         </a>
