--- a/views/widget/top/top.css
+++ b/views/widget/top/top.css
@@ -1,7 +1,7 @@
 .top{
   width:100%;
   height: 30px;
-  background: #efefef;
+  border-bottom-color: #dcdcdc 1px solid;
   font-size: 12px;
   color:#666666;
 }
